--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,5 @@
+<%= content_for :title, resource_class.model_name.human.pluralize %>
+
 <section class="<%= resource_class.model_name.plural %>">
   <header>
     <h1><%= resource_class.model_name.human.pluralize %></h1>
