--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,32 +18,44 @@
  *= require_self
  */
 
+body,dl,dt,dd,ul,ol,li,header,h1,h2,h3,h4,h5,h6 {
+  margin:0;
+  padding:0;
+}
+
+body > header {
+  color: #fff;
+  background-color: #262626;
+  padding: 1rem;
+}
+
+ul.nav li {
+  display: inline-block;
+}
+ul.nav li a {
+  padding: 1rem;
+  color: inherit;
+  text-decoration: none;
+}
+
+
 main {
   background-color: #eee;
   padding-bottom: 80px;
   width: 100%;
 }
 
-header {
-  border: 1px solid #d4d4d4;
-  background-image: linear-gradient(to bottom, white, #f2f2f2);
-  background-color: #f9f9f9;
-  -webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
-  margin-bottom: 20px;
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+article > header {
+  background:dodgerblue;
+  padding:1rem;
+}
+article > header h1 {
+  text-transform:uppercase;
+  font-size:2.5rem;
+  color:#fff;
+  padding: 3rem 0;
 }
 
-ul.nav li {
-  display: inline;
-}
-ul.nav li a {
-  padding: 10px 15px 10px;
-  color: #777777;
-  text-decoration: none;
-  text-shadow: 0 1px 0 white;
-}
 
 .flash {
   padding: 8px 35px 8px 14px;
@@ -63,3 +75,4 @@ ul.nav li a {
   border-color: #eed3d7;
   color: #b94a48;
 }
+
