--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title><%= content_for?(:title) ? yield(:title) : "Happening" %></title>
-  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Raceman" %>">
+  <meta name="description" content="<%= content_for?(:description) ? yield(:description) : "Happening" %>">
+  <link rel="stylesheet" href="//brick.a.ssl.fastly.net/Telex:400/Noto+Sans:400,400i,700,700i/Karla:400,400i,700,700i/Clear+Sans:250,300,400,400i,500,500i,700,700i/Aleo:300,300i,400,400i,700,700i">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
