--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -3,7 +3,7 @@ body {
   color: #333;
 }
 
-body, p, ol, ul, td {
+body, p, ol, ul, td, input, textarea, select, button {
   font-family: Clear Sans,Karla,Avenir Next,Aleo,Telex,Noto Sans,verdana, arial, helvetica, sans-serif;
   line-height:1.5;
 //  font-size: 13px;
